# Various

./: .Xresources  .abcde.conf  .bash_profile  .bashrc  .fonts.conf  .gtkrc-2.0  .inputrc  .vimperatorrc  .vimrc  .xinitrc  .xmobarrc  .xmobarrc.laptop  .xpdfrc  .zprofile  .zshprompt  .zshrc  README.md  init.vim  vim_install.sh  xmonad.hs
.xmonad/: build  xmonad.hs
.xmonad/src/: myxmonad.cabal  stack.yaml
