cabal-version: 1.12
name:           myxmonad
version:        0.1
synopsis:       My Xmonad config
author:         Sylvain HENRY
maintainer:     sylvain@haskus.fr
copyright:      Sylvain HENRY 2020
license:        BSD3
build-type:     Simple

executable myxmonad
  main-is: myxmonad.hs
  ghc-options: -Wall -O
  build-depends:
      base >=4.8 && <5
    , xmonad
    , xmonad-contrib
    , X11
    , containers
  default-language: Haskell2010
